--- a/GetRide/frontend/src/locales/en.json
+++ b/GetRide/frontend/src/locales/en.json
@@ -5,14 +5,43 @@
   "contact": "Contact",
   "register": "Register",
   "login": "Login",
+  "loginDesc": "Enter your email and pass to login.",
+  "loginDescOne": "Don’t have account?",
+  "loginDescTwo": "Go to",
+  "email": "E-mail",
+  "password": "Password",
+  "newPassword": "New Password",
+  "confirmPassword": "Confirm password",
+  "confirmNewPassword": "Confirm new password",
+  "passwordOne": "Forgot password?",
+  "passwordReset": " Password reset",
+  "passwordResetButton": "Reset password",
+  "enterNewPassword": "Enter new password.",
+  "passwordResetDesc": "Enter your email for reset link.",
+  "passwordTime": "Time remaining:",
+  "fullName": "Full Name",
+  "phone": "Phone Number*",
   "welcoming": "Welcome, {{name}}",
   "language": "Language",
+  "link": "Quick links",
+  "rights": "All rights are reserved",
+  "emailButton": "Send email",
+
+  "registerPageDescOne": "Password Strength :",
+  "registerStrong": "Strong",
+  "registerWeak": "Weak",
+  "registerPageDescTwo": "Cannot contain your name or email address",
+  "registerPageDescThree": "At least 8 characters",
+  "registerPageDescFour": "Contains a number or symbol",
+  "registerPageDescFive": "Password match",
+  "registerPageDescSix": "Already have account?",
+
+  "logPageTitle": "START YOUR JOURNEY!",
+  "logPageDesc": "Every shared ride is a step towards a cleaner planet and a better world for future generations!",
 
   "welcome": "Welcome to <strong>Get Ride</strong>, a platform that is changing the future of travel. Founded with a vision to reduce traffic congestion and minimize pollution, we are committed to developing efficient and innovative solutions that make traveling simpler and more affordable.",
-
   "missionTitle": "Our Mission",
   "missionDescription": "Our mission is to create a transportation system that connects passengers and drivers. By connecting drivers with available seats and passengers with similar destinations, not only are travel costs reduced, but new social connections are created, and significant contributions are made to environmental protection.",
-
   "whyChooseUs": "Why Choose Us?",
   "ecology": "Environmental Awareness First",
   "ecologyDescription": "Every shared ride is a step towards a cleaner planet and a better world for future generations.",
@@ -35,5 +64,156 @@
   "modalError": "An error occurred while sending your message. Please try again later.",
   "close": "Close",
   "writeToUs": "Write to us at:",
-  "connectWithUs": "Connect with us:"
+  "connectWithUs": "Connect with us:",
+
+  "titleHowItWorks": "How does GetRide work?",
+  "basicInfo": "Basic information",
+  "basicInfoFirstTitle": "Are you traveling?",
+  "basicInfoFirstDesc": "Find a ride with a trusted driver! Save money while traveling, even at the last moment.",
+  "basicInfoFirstTitleOne": "1. Find a ride",
+  "basicInfoFirstDescOne": "Just tell us where you are traveling and when you are leaving.Then choose the transportation that suits you the most! If you need more information, you can always send a message to the driver before making the reservation.Check the drivers' profiles and find out what others are saying about traveling with them.",
+  "basicInfoFirstDescOne1": "Read more about Trust and Safety.",
+  "basicInfoFirstTitleTwo": "2. Reserve online",
+  "basicInfoFirstDescTwo": "Click on the reservation and you will get the driver's contact phone number.",
+  "basicInfoFirstDescTwo2": "The driver can also be contacted via message once you reserve your seat.",
+  "basicInfoFirstTitleThree": "3. Travel together",
+  "basicInfoFirstDescThree": "Enjoy the ride and don't forget to rate your experience! When you rate the driver, you increase your chances of being rated as well.",
+  "basicInfoFirstDescThree3": "Pay for the ride in cash during the trip.",
+  "basicInfoSecondTitle": "Are there any available seats?",
+  "basicInfoSecondDesc": "Share your intercity trips with other passengers and split the costs!",
+  "basicInfoSecondTitleOne": "1. Offer ride",
+  "basicInfoSecondDescOne": "Just tell us where and when you're traveling, and at which destination you want passengers to board and get off.",
+  "basicInfoSecondDescOne1": "Choose one of our suggested pick-up and drop-off locations. That way, it will be easier for everyone!",
+  "basicInfoSecondTitleTwo": " 2. Your passengers book online",
+  "basicInfoSecondDescTwo": "When the passenger reserves their seat, we will send you their phone number.",
+  "basicInfoSecondDescTwo2": "You can review the information about your ride and passengers at any time.",
+  "basicInfoSecondTitleThree": "3. Travel together",
+  "basicInfoSecondDescThree": "Chat, listen to music together, or simply enjoy the quiet ride with other passengers.",
+  "basicInfoSecondTitleFour": "4. Passengers pay you in cash.",
+  "basicInfoSecondDescFour": "Passengers will pay you in cash for the use of the services during the ride.",
+  "rideOffer": "How to offer transportation",
+  "rideOfferTitleOne": "Step 1: Post the ride",
+  "rideOfferStepOne": "Select the departure and arrival cities, and if necessary, add transit points through which you plan to pass. Choose the departure date and time.",
+  "rideOfferTitleTwo": "Step 2: Add details",
+  "rideOfferStepTwo": "Set the price per passenger, the number of available seats, and choose whether you want to offer a maximum of two passengers in the back seat for better comfort. Add details about the ride, such as allowed luggage dimensions, permitted pets in the car, and whether you're willing to stop along the way.",
+  "rideOfferTitleThree": "Step 3: Confirmation",
+  "rideOfferStepThree": "Choose how you want to manage the bookings – automatically or manually. Post the offer, and it will immediately become visible on the platform, allowing passengers to make a reservation.",
+  "rideOfferStepThree3": "Offer transportation now!",
+  "rating": "Rate the ride",
+  "ratingFirstTitle": "Why do we have ratings?",
+  "ratingFirstDesc": "Ratings are recommendations and help in making decisions when choosing transportation. Leave a rating the next time you travel and share your experiences with others.",
+  "ratingSecondTitle": "How to leave a rating?",
+  "ratingSecondDesc": "You can leave ratings one day after the ride. You will be reminded via email and notifications on your profile.",
+  "ratingSecondDescListOne": "1. Choose whether the member you are rating is a driver or a passenger.",
+  "ratingSecondDescListTwo": "2. Choose the answer that best describes your experience.",
+  "ratingSecondDescListThree": "3. Write a brief description of your experience, including whether you arrived on time or how the journey was.",
+  "ratingSecondDescListFour": "Not feeling inspired? Ask yourself if you would recommend this person to your family.",
+  "ratingThirdTitle": "Rate the driver",
+  "ratingThirdDesc": "If you are a passenger, you can rate the driver anonymously. The average rating will be displayed on the driver's profile",
+  "ratingFourthTitle": "Respond to a rating",
+  "ratingFourthDescOne": "If you receive a negative rating, you can respond to it, and your response will be displayed under the rating on your profile.",
+  "ratingFourthDescTwo": "View your ratings!",
+  "account": "How to create a profile?",
+  "accountDesc": "Registration is free! Just go to GetRide.mk, click on Register button and follow the instructions. You can use your email address or Facebook profile for registration. After registration, some additional information will be required before you can book transportation, so make sure to update your profile",
+  "setAccount": "Set up your profile",
+  "setAccountFirstTitle": "You have logged in, but you need to update your profile.",
+  "setAccountFirstDesc": "Here’s how to update your personal information, manage notifications, and verify your profile.",
+  "setAccountSecondTitle": "Edit personal information",
+  "setAccountSecondDesc": "Regardless of whether you are a passenger or a driver, editing your profile is mandatory. Once logged in, go to your profile to:",
+  "setAccountSecondDescListOne": "Edit your profile settings: Learn where to find and update your personal information.",
+  "setAccountSecondDescListTwo": "Change your e-mail address: Learn how to add or update your e-mail address.",
+  "setAccountSecondDescListThree": "Change or reset your password: Learn how to create or update your password.",
+  "setAccountSecondDescListFour": "Manage notifications: Learn how to manage the ways you receive notifications on GetRide.",
+  "setAccountThirdTitle": "Verify your profile.",
+  "setAccountThirdDescOne": "Verifying your profile strengthens trust within our community and helps other members feel safer when traveling with you. To receive the 'Verified Profile' badge, you need to do a few things:",
+  "setAccountThirdDescListOne": "Verification of your identity: Information and troubleshooting regarding submitting your ID document through our secure verification system — which we do not share with anyone.",
+  "setAccountThirdDescListTwo": "Confirmation of your phone number: See how to add, update, and verify your phone number.",
+  "setAccountThirdDescListThree": "Confirmation of your email address: See how to add or update your email address.",
+  "setAccountThirdDescTwo": "The security of your personal data is very important. For more information on how we store your personal data, please check our Privacy Policy.",
+  "price": "How is the price determined, and what are the payment procedures?",
+  "priceDescOne": "The price of transportation is fixed when the driver offers a ride and is non-negotiable. It is the same for all passengers. The price is determined based on a recommendation and calculation provided by GetRide, which is based on the travel plan and the driver’s actual costs. Drivers have the opportunity to influence the price within reasonable limits, including factors such as vehicle comfort or their willingness to deviate from the main route.",
+  "priceDescTwo": "The price cannot exceed the upper limit set by GetRide, to ensure a fair division of costs and prevent the driver from making a profit beyond the allowed limit. Generally, the price per passenger represents one-third of the fuel cost required for the trip. When the driver transports three passengers, they cover all fuel expenses.",
+  "priceDescThree": "Payment to the driver is simple: it should be paid in cash on the day of the trip.",
+  "priceDescFour": "Remember – bring the exact amount!",
+
+  "filterCompTitleOne": "Sort by",
+  "filterCompTitleTwo": "Departure time",
+  "filterCompTitleThree": "Benefits",
+  "filterCompButtonOne": "Clear filters",
+  "filterCompButtonTwo": "Filter",
+  "filterCompSortOne": "⏳ Earliest departure time",
+  "filterCompSortTwo": "💰 Lowest price",
+  "filterCompSortThree": "🚗 Shortest ride",
+  "filterCompSortFour": "⭐ Best driver ratings",
+  "filterCompTimeOne": "Before 06:00",
+  "filterCompTimeTwo": "After 18:00",
+  "filterCompBenefitsOne": "🚘  Maximum 2 passengers in the back seat",
+  "filterCompBenefitsTwo": "🐶 Pets allowed",
+  "filterCompBenefitsThree": "🚬 Smoking allowed",
+
+  "ridesCompTitle": "Available rides",
+  "ridesCompDesc": "No rides available for the selected time.",
+  "ridesCompDescOne": "Ratings:",
+  "ridesCompDescTwo": "Destination:",
+  "ridesCompDescThree": "Departure:",
+  "ridesCompDescFour": "Duration:",
+  "ridesCompDescFive": "Price:",
+  "ridesCompDescSix": "Pets allowed:",
+  "ridesCompDescSeven": "Maximum two passengers in the back seat:",
+  "ridesCompDescEight": "Smoking allowed:",
+  "ridesCompButton": "Book",
+
+  "passengersCompOne": "Adults (16+ years)",
+  "passengersCompTwo": "Children (4-15 years)",
+  "passengersCompThree": "Infants (0-3 years)",
+  "passengersCompFour": "Passengers with limited mobility",
+  "passengersCompFive": "No added passengers with limited mobility.",
+  "passengersCompSix": "Date of birth:",
+  "passengersCompSeven": "Type of disability:",
+  "passengersCompEight": "Select type",
+  "passengersCompNine": "Wheelchair",
+  "passengersCompTen": "Blindness",
+  "passengersCompEleven": "Other",
+  "passengersCompButton": "Add",
+
+  "searchDescOne": "passenger",
+  "searchDescOneOne": "passengers",
+  "searchDescTwo": "Departure location",
+  "searchDescThree": "Arrival location",
+  "searchDescFour": "Number of passengers",
+  "searchButton": "Search",
+
+  "heroTitle": "Transport to your destination",
+
+  "homePageTitleOne": "Find a Destination",
+  "homePageTitleTwo": "Find a Driver",
+  "homePageTitleThree": "Book a Ride",
+  "homePageTitleFour": "Arrive on Time",
+  "homePageDescOne": "Find the destination you want to go to",
+  "homePageDescTwo": "Find someone traveling to your destination",
+  "homePageDescThree": "Book a seat",
+  "homePageDescFour": "Arrive on time. You will know your arrival time in advance",
+
+  "homePageForm": "+ Post a Ride",
+  "postRideFormAlert": "The ride has been successfully posted!",
+  "postRideFormTitle": "Post a Ride",
+  "postRideFormOne": "Departure location:",
+  "postRideFormTwo": "Where can you pick up passengers:",
+  "postRideFormThree": "Number of passengers:",
+  "postRideFormFour": "Departure time:",
+  "postRideFormFive": "Destination:",
+  "postRideFormButton": "Post",
+
+  "featuresTitleOne": "Travel Safely to Your Destination",
+  "featuresTitleTwo": "Save Money While Traveling",
+  "featuresTitleThree": "Quickly Find a Ride to Your City",
+  "featuresDescOne": "With our app, you can choose who you travel with. Drivers are rated by passengers, ensuring a safe journey for you.",
+  "featuresDescTwo": "You have the opportunity to save money while traveling. Share your expenses with other passengers.",
+  "featuresDescThree": "Search active listings and find a driver who will take you safely to your destination.",
+
+  "dropDownOne": "🚗 Your Rides",
+  "dropDownTwo": "💬  Inbox",
+  "dropDownThree": "👤 Profile",
+  "dropDownFour": "🏦 Payment and Refunds",
+  "dropDownButton": "Logout"
 }
