--- a/GetRide/frontend/src/locales/mk.json
+++ b/GetRide/frontend/src/locales/mk.json
@@ -5,14 +5,43 @@
   "contact": "Контакт",
   "register": "Регистрирај се",
   "login": "Логирај се",
+  "loginDesc": "Внесете ја Вашата е-пошта и лозинка за да се најавите",
+  "loginDescOne": "Немате сметка?",
+  "loginDescTwo": "Одете на",
+  "email": "Е-пошта",
+  "password": "Лозинка",
+  "newPassword": "Нова Лозинка",
+  "confirmPassword": "Потврдете ја лозинката",
+  "confirmNewPassword": "Потврдете ја новата лозинката",
+  "passwordOne": "Ја заборавивте лозинката?",
+  "passwordReset": "Ресетирање на лозинка",
+  "passwordResetDesc": "Внесете ја вашата е-пошта и ќе добиете линк за ресетирање.",
+  "passwordResetButton": "Ресетирај лозинка",
+  "enterNewPassword": "Внесете нова лозинка.",
+  "passwordTime": "Преостанато време:",
+  "fullName": "Име и Презиме",
+  "phone": "Телефонски број*",
   "welcoming": "Добредојдовте, {{name}}",
   "language": "Јазик",
+  "link": "Брзи линкови",
+  "rights": "Сите права се задржани",
+  "emailButton": "Испрати е-пошта",
+
+  "registerPageDescOne": "Безбедност на лозинка:",
+  "registerStrong": "Силна",
+  "registerWeak": "Слаба",
+  "registerPageDescTwo": "Не смее да го содржи вашето име или е-пошта",
+  "registerPageDescThree": "Најмалку 8 карактери",
+  "registerPageDescFour": "Мора да содржи број или симбол",
+  "registerPageDescFive": "Лозинките се совпаѓаат",
+  "registerPageDescSix": "Веќе имате сметка?",
+
+  "logPageTitle": "ЗАПОЧНИ ГО ТВОЕТО ПАТУВАЊЕ!",
+  "logPageDesc": "Секое споделено возење е чекор кон почиста планета и подобар свет за идните генерации!",
 
   "welcome": "Добредојдовте во <strong>Get Ride</strong> , платформа која ја менува иднината на патувањата. Основанa со визија за намалување на сообраќајниот метеж и минимизирање на загадувањето, ние сме посветени на развој на ефикасни и иновативни решенија кои го прават патувањето поедноставно и поекономично.",
-
   "missionTitle": "Нашата Мисија",
   "missionDescription": "Нашата мисија е да создадеме транспортен систем кој ги поврзува патниците и возачите. Со поврзување на возачи со слободни седишта и патници со слични дестинации, не само што се намалуваат трошоците за патување, туку и се создаваат нови социјални контакти и значително се придонесува во заштитата на животната средина.",
-
   "whyChooseUs": "Зошто да не изберете нас?",
   "ecology": "Еколошката свест на прво место",
   "ecologyDescription": "Секое споделено возење е чекор кон почиста планета и подобар свет за идните генерации.",
@@ -35,5 +64,156 @@
   "modalError": "Настана грешка при испраќањето на вашата порака. Обидете се повторно подоцна.",
   "close": "Затвори",
   "writeToUs": "Пишете ни на:",
-  "connectWithUs": "Поврзете се со нас:"
+  "connectWithUs": "Поврзете се со нас:",
+
+  "titleHowItWorks": "Како функционира GetRide?",
+  "basicInfo": "Основни информации",
+  "basicInfoFirstTitle": "Патувате?",
+  "basicInfoFirstDesc": "Пронајдете превоз со возач од доверба! Штедете патувајќи, дури и во последен момент.",
+  "basicInfoFirstTitleOne": "1. Пронајдете превоз",
+  "basicInfoFirstDescOne": "Само кажете ни каде патувате и кога заминувате. Потоа одберете превоз што најмногу Ви одговара! Ако Ви требаат повеќе информации, секогаш можете да испратите порака до возачот пред да ја направите резервацијата.Погледнете ги профилите на возачите и дознајте што другите кажуваат за патувањето со нив.",
+  "basicInfoFirstDescOne1": "Прочитајте повеќе за Доверба и безбедност.",
+  "basicInfoFirstTitleTwo": "2. Резервирајте преку интернет",
+  "basicInfoFirstDescTwo": "Кликнете на резервацијата и ќе го добиете телефонскиот број на возачот за контакт.",
+  "basicInfoFirstDescTwo2": "Возачот исто така може да биде контактиран со порака, откако ќе го резервирате своето седиште.",
+  "basicInfoFirstTitleThree": "3. Патувајте заедно",
+  "basicInfoFirstDescThree": "Уживајте во возењето и не заборавајте да го оцените Вашето искуство!Кога ќе го оцените возачот, ги зголемувате шансите да бидете и Вие оценети.",
+  "basicInfoFirstDescThree3": "Платете за патувањето во готово за време на возењето.",
+  "basicInfoSecondTitle": "Имате слободни места?",
+  "basicInfoSecondDesc": "Споделете ги Вашите меѓуградски патувања со други патници и поделете ги трошоците!",
+  "basicInfoSecondTitleOne": "1. Понудете превоз",
+  "basicInfoSecondDescOne": "Само кажете каде и кога патувате,и на која дестинација сакате патниците да се качат и симнат.",
+  "basicInfoSecondDescOne1": "Изберете едно од нашите предложени места за качување и симнување на патниците. Така ќе биде полесно за сите!",
+  "basicInfoSecondTitleTwo": "2. Вашите патници резервираат преку интернет",
+  "basicInfoSecondDescTwo": "Кога патникот ќе го резервира своето седиште, ќе Ви го испратиме неговиот телефонски број.",
+  "basicInfoSecondDescTwo2": "Можете да ги прегледате информациите за Вашето возење и патниците во секое време.",
+  "basicInfoSecondTitleThree": "3. Патувајте заедно",
+  "basicInfoSecondDescThree": "Раговарајте, слушајте музика заедно или едноставно уживајте во тивкото возење со другите патници.",
+  "basicInfoSecondTitleFour": "4. Патниците Ви плаќаат во готово",
+  "basicInfoSecondDescFour": "Патниците ќе Ви платат за користењето на услугите во готово и за време на возењето.",
+  "rideOffer": "Како да понудите превоз?",
+  "rideOfferTitleOne": "Чекор 1: Објавете го возењето",
+  "rideOfferStepOne": "Изберете градови на тргнување и пристигнување, ако е потребно, додадете транзитни точки низ кои планирате да поминете. Изберете датум и време на тргнување.",
+  "rideOfferTitleTwo": "Чекор 2: Додадете детали",
+  "rideOfferStepTwo": "Одредете цена по патник, број на слободни места и изберете дали сакате да понудите максимално двајца патници на задното седиште за поголема удобност. Додадете детали за возењето, како што се дозволени димензии на багаж,дозволени миленици во автомобил и дали сте подготвени да застанете по пат.",
+  "rideOfferTitleThree": "Чекор 3: Потврда",
+  "rideOfferStepThree": "Одберете како сакате да управувате со резервациите - автоматски или рачно управување. Објавете ја понудата и веднаш ќе стане видлива на платформата и патниците можат да направат резервација.",
+  "rideOfferStepThree3": "Понудете превоз сега!",
+  "rating": "Оценете го возењето",
+  "ratingFirstTitle": "Зошто имаме оцени?",
+  "ratingFirstDesc": "Оцените се препораки и помагаат во донесување на одлуки при избор на превоз. Оставете оцена следниот пат кога ќе патувате и споделете ги Вашите искуства со другите.",
+  "ratingSecondTitle": "Како да оставите оцена?",
+  "ratingSecondDesc": "Оцените можете да ги оставите еден ден по патувањето. Ќе бидете потсетени преку e-mail и известувања на профилот.",
+  "ratingSecondDescListOne": "1. Одберете дали членот што го оценувате е возач или патник.",
+  "ratingSecondDescListTwo": "2. Изберете одговор што најдобро го опишува Вашeтo искуство.",
+  "ratingSecondDescListThree": "3. Напишете краток опис на Вашето искуство, дали сте стигнале на време или како беше во текот на патувањето.",
+  "ratingSecondDescListFour": "Немате инспирација? Запрашајте се дали би ја препорачале оваа личност на Вашето семејство.",
+  "ratingThirdTitle": "Оценете го возачот",
+  "ratingThirdDesc": "Ако сте патник, можете анонимно да го оцените возачот. Просечната оцена ќе биде прикажана на профилот на возачот.",
+  "ratingFourthTitle": "Одговор на оцена",
+  "ratingFourthDescOne": "Ако добиете негативна оцена, можете да одговорите на неа, а Вашиот одговор ќе биде прикажан под оцената на Вашиот профил.",
+  "ratingFourthDescTwo": "Погледнете ги Вашите оцени!",
+  "account": "Како да направите профил?",
+  "accountDesc": "Регистрирањето е  бесплатно! Само одете на GetRide.mk, кликнете на копчето Регистрирај се и следете ги упатствата. За регистрација можете да користите E-mail адреса или Фејсбук профил. По регистрацијата, ќе бидат потребни уште некои информации пред да можете да резервирате превоз, па потрудете се да го уредите својот профил.",
+  "setAccount": "Подесување на Вашиот профил",
+  "setAccountFirstTitle": "Се пријавивте, но треба да го уредите Вашиот профил",
+  "setAccountFirstDesc": "Еве како да ги уредите Вашите лични податоци, да управувате со известувањата и да го потврдите Вашиот профил.",
+  "setAccountSecondTitle": "Промена на лични податоци",
+  "setAccountSecondDesc": "Без разлика дали сте патник или возач, ажурирањето на Вашиот профил е задолжително. Кога ќе се најавите, одете на Вашиот профил за да:",
+  "setAccountSecondDescListOne": "Изменeте ги поставките на профилот: Дознајте каде да ги пронајдете и ажурирајте ги Вашите лични податоци.",
+  "setAccountSecondDescListTwo": "Променете ја Вашата e-mail адреса: Дознајте како да додадете или да ја ажурирате Вашата e-mail адреса.",
+  "setAccountSecondDescListThree": "Променете ја или ресетирајте ја Вашата лозинка: Дознајте како да ја креирате или ажурирате Вашата лозинка.",
+  "setAccountSecondDescListFour": "Управувајте со известувањата: Дознајте како да управувате со начините на кои примате известувања на GetRide.",
+  "setAccountThirdTitle": "Потврда на Вашиот профил",
+  "setAccountThirdDescOne": "Потврдувањето на Вашиот профил ја зацврстува довербата во нашата заедница и помага другите членови да се чувствуваат побезбедно кога патуваат со Вас. За да добиете значка „Потврден профил“, треба да направите неколку работи:",
+  "setAccountThirdDescListOne": "Потврдување на Вашиот идентитет: Информации и решавање на проблеми во врска со испраќањето на Вашиот личен документ преку нашиот безбеден систем за верификација — што не го споделуваме со никого.",
+  "setAccountThirdDescListTwo": "Потврда на Вашиот телефонски број: Видете како да додадете, ажурирате и да го потврдите Вашиот телефонски број.",
+  "setAccountThirdDescListThree": "Потврда на Вашата e-mail адреса: Видете како да додадете или ажурирате Ваша e-mail адреса.",
+  "setAccountThirdDescTwo": "Безбедноста на Вашите лични податоци е многу важна. За повеќе информации за тоа како ги чуваме Вашите лични податоци, погледнете ја нашата Политика за приватност.",
+  "price": "Како се утврдува цената и кои се процедурите за плаќање?",
+  "priceDescOne": "Цената на превозот е фиксна кога возачот нуди превоз и не подлежи на преговори. Таа е иста за сите патници. Цената се утврдува по препорака и пресметка која ја дава GetRide врз основа на планот на патувањето и реалните трошоци на возачот. Возачите имаат можност да влијаат на цената, во разумни граници,вклучувајќи фактори како удобноста на возилото или нивната подготвеност да се одвојат од главниот пат.",
+  "priceDescTwo": "Цената не може да ја надмине горната граница утврдена од GetRide, со цел да се обезбеди фер поделба на трошоците и да се спречи возачот да оствари профит поголем од дозволениот. Општо земено, цената по патник претставува една третина од цената на горивото потребно за патувањето. Кога возачот превезува тројца патници, тој ги покрива сите трошоци за гориво.",
+  "priceDescThree": "Плаќањето на возачот е едноставно: треба да се плати во готово на денот на патувањето.",
+  "priceDescFour": "Запомнете – понесете точен износ!",
+
+  "filterCompTitleOne": "Подреди по",
+  "filterCompTitleTwo": "Време на поаѓање",
+  "filterCompTitleThree": "Предности",
+  "filterCompButtonOne": "Избриши филтри",
+  "filterCompButtonTwo": "Филтер",
+  "filterCompSortOne": "⏳ Најран термин на поаѓање",
+  "filterCompSortTwo": "💰 Најниска цена",
+  "filterCompSortThree": "🚗 Најкратко возење",
+  "filterCompSortFour": "⭐ Најдобри оцени на возач",
+  "filterCompTimeOne": "Пред 06:00",
+  "filterCompTimeTwo": "После 18:00",
+  "filterCompBenefitsOne": "🚘 Најмногу 2 на задно седиште",
+  "filterCompBenefitsOTwo": "🐶 Дозволени домашни миленици",
+  "filterCompBenefitsThree": "🚬 Дозволено пушење",
+
+  "ridesCompTitle": "Достапен превоз",
+  "ridesCompDesc": "Нема превоз за избраниот термин.",
+  "ridesCompDescOne": "Оцени:",
+  "ridesCompDescTwo": "Дестинација:",
+  "ridesCompDescThree": "Поаѓање:",
+  "ridesCompDescFour": "Времетраење:",
+  "ridesCompDescFive": "Цена:",
+  "ridesCompDescSix": "Дозволени домашни миленици:",
+  "ridesCompDescSeven": "Најмногу два патници на заднo седиште:",
+  "ridesCompDescEight": "Дозволено е пушење:",
+  "ridesCompButton": "Резервирај",
+
+  "passengersCompOne": "Возрасни (16+ год.)",
+  "passengersCompTwo": "Деца (4-15 год.)",
+  "passengersCompThree": "Бебиња (0-3 год.)",
+  "passengersCompFour": "Патници со ограничено движење",
+  "passengersCompFive": "Нема додадени патници со ограничено движење.",
+  "passengersCompSix": "Дата на раѓање:",
+  "passengersCompSeven": "Тип на инвалидитет:",
+  "passengersCompEight": "Изберете тип",
+  "passengersCompNine": "Инвалидска количка",
+  "passengersCompTen": "Слепило",
+  "passengersCompEleven": "Друго",
+  "passengersCompButton": "Дoдади",
+
+  "searchDescOne": "патник",
+  "searchDescOneOne": "патници",
+  "searchDescTwo": "Место на тргнување",
+  "searchDescThree": "Место на пристигнување",
+  "searchDescFour": "Број на патници",
+  "searchButton": "Барај",
+
+  "heroTitle": "Превоз до вашата дестинација",
+
+  "homePageTitleOne": "Пронајди дестинација",
+  "homePageTitleTwo": "Пронајди возач",
+  "homePageTitleThree": "Резервирај",
+  "homePageTitleFour": "Пристигни на време",
+  "homePageDescOne": "Пронајдете ја дестинацијата каде што сакате да одите",
+  "homePageDescTwo": "Пронајдете некој кој патува кон Вашата дестинација",
+  "homePageDescThree": "Резервирајте место",
+  "homePageDescFour": "Пристигнете на време. Времето на Вашето пристигнување однапред ќе го знаете",
+
+  "homePageForm": "+ Објави Возење",
+  "postRideFormAlert": "Возењето е успешно објавено!",
+  "postRideFormTitle": "Објави Возење",
+  "postRideFormOne": "Место на тргнување:",
+  "postRideFormTwo": "Каде може да ги собереш патниците:",
+  "postRideFormThree": "Број на патници:",
+  "postRideFormFour": "Време на тргнување:",
+  "postRideFormFive": "Дестинација:",
+  "postRideFormButton": "Објави",
+
+  "featuresTitleOne": "Возете се безбедно до Вашата дестинација",
+  "featuresTitleTwo": "Заштедете додека патувате",
+  "featuresTitleThree": "Брзо најдете превоз до Вашиот град",
+  "featuresDescOne": "Преку нашата апликација имате можност да изберете со кого ќе патувате. Лицата кои вршат превоз добиваат оцени и можете да бидете сигурни при Вашето возење.",
+  "featuresDescTwo": "Имате можност да заштедите додека патувате. Поделете ги Вашите трошоци со другите патници.",
+  "featuresDescThree": "Пребарајте активни огласи и пронајдете возач што ќе Ве однесе безбедно до Вашата дестинација.",
+
+  "dropDownOne": "🚗 Вашите возења",
+  "dropDownTwo": "💬 Сандаче",
+  "dropDownThree": "👤 Профил",
+  "dropDownFour": "🏦 Уплата и поврат на средства",
+  "dropDownButton": "Oдјави се"
 }
