--- a/GetRide/frontend/src/locales/sq.json
+++ b/GetRide/frontend/src/locales/sq.json
@@ -3,10 +3,41 @@
   "aboutUs": "Rreth Nesh",
   "howItWorks": "Si Funksionon",
   "contact": "Kontakt",
-  "register": "Regjistrohu",
-  "login": "Hyr",
+  "register": "Regjistrohuni",
+  "login": "Hyni",
+  "loginDesc": "Shkruani emailin dhe fjalëkalimin tuaj për t'u identifikuar.",
+  "loginDescOne": "Nuk keni llogari?",
+  "loginDescTwo": "Shkoni te",
+  "email": "E-mail",
+  "password": "Fjalëkalim",
+  "newPassword": "Fjalëkalimi i ri",
+  "confirmPassword": "Konfirmo fjalëkalimin",
+  "confirmNewPassword": "Konfirmo fjalëkalimin e ri",
+  "passwordOne": "E harruat fjalëkalimin?",
+  "passwordReset": "Rivendosja e fjalëkalimit",
+  "passwordResetDesc": "Shkruani emailin tuaj dhe do të merrni një lidhje për rivendosjen.",
+  "passwordResetButton": "Rivendos fjalëkalimin",
+  "enterNewPassword": "Shkruani fjalëkalimin e ri.",
+  "passwordTime": "Koha e mbetur:",
+  "fullName": "Emri i plotë",
+  "phone": "Numri i telefonit*",
   "welcoming": "Mirësevini, {{name}}",
   "language": "Gjuha",
+  "link": "Lidhje të shpejta",
+  "rights": "Të gjitha të drejtat e rezervuara",
+  "emailButton": "Dërgo email",
+
+  "registerPageDescOne": "Siguria e fjalëkalimit:",
+  "registerStrong": "E Fortë",
+  "registerWeak": "E Dobët",
+  "registerPageDescTwo": "Nuk mund të përmbajë emrin tuaj ose adresën e emailit",
+  "registerPageDescThree": "Të paktën 8 karaktere",
+  "registerPageDescFour": "Përmban një numër ose simbol",
+  "registerPageDescFive": "Fjalëkalimet përputhen",
+  "registerPageDescSix": "Keni tashmë një llogari?",
+
+  "logPageTitle": "NIS UDHËTIMIN TËND!",
+  "logPageDesc": "Çdo udhëtim i ndarë është një hap drejt një planeti më të pastër dhe një bote më të mirë për brezat e ardhshëm!",
 
   "welcome": "Mirësevini në <strong>Get Ride</strong>, një platformë që po ndryshon të ardhmen e udhëtimeve. E themeluar me vizionin për të zvogëluar trafikimin dhe minimizuar ndotjen, ne jemi të përkushtuar në zhvillimin e zgjidhjeve efikase dhe inovative që e bëjnë udhëtimin më të thjeshtë dhe më të përballueshëm.",
   "missionTitle": "Misioni Ynë",
@@ -33,5 +64,156 @@
   "modalError": "Ka ndodhur një gabim gjatë dërgimit të mesazhit tuaj. Provoni përsëri më vonë.",
   "close": "Cerrar",
   "writeToUs": "Na shkruani në:",
-  "connectWithUs": "Lidhu me ne:"
+  "connectWithUs": "Lidhu me ne:",
+
+  "titleHowItWorks": "Si funksionon GetRide?",
+  "basicInfo": "Informacione bazë",
+  "basicInfoFirstTitle": "Ju udhëtoni?",
+  "basicInfoFirstDesc": "Gjeni transport me një drejtues të besueshëm! Kurseni gjatë udhëtimit, edhe në momentin e fundit.",
+  "basicInfoFirstTitleOne": "1. Gjeni transport",
+  "basicInfoFirstDescOne": "Thjesht na thoni ku po udhëtoni dhe kur po largoheni. Më pas zgjidhni transportin që ju përshtatet më shumë! Nëse keni nevojë për më shumë informacion, gjithmonë mund të dërgoni një mesazh te shoferi para se të bëni rezervimin.Shikoni profilin e shoferëve dhe mësoni çfarë thonë të tjerët për udhëtimin me ta.",
+  "basicInfoFirstDescOne1": "Lexoni më shumë për Besimin dhe Sigurinë.",
+  "basicInfoFirstTitleTwo": "2. Rezervoni online",
+  "basicInfoFirstDescTwo": "Klikoni në rezervimin dhe do të merrni numrin e telefonit të shoferit për kontakt.",
+  "basicInfoFirstDescTwo2": "Shoferi gjithashtu mund të kontaktohet me mesazh pasi të rezervoni vendin tuaj.",
+  "basicInfoFirstTitleThree": "3. Udhëtoni së bashku",
+  "basicInfoFirstDescThree": "Gëzoni udhëtimin dhe mos harroni të vlerësoni përvojën tuaj! Kur vlerësoni shoferin, rrisni mundësitë që të vlerësoheni edhe ju.",
+  "basicInfoFirstDescThree3": "Paguani për udhëtimin në cash gjatë udhëtimit.",
+  "basicInfoSecondTitle": "A keni vende të lira?",
+  "basicInfoSecondDesc": "Ndani udhëtimet tuaja ndërqytetëse me pasagjerët e tjerë dhe ndani shpenzimet!",
+  "basicInfoSecondTitleOne": "1. Ofroni transport",
+  "basicInfoSecondDescOne": "Thjesht thuaj ku dhe kur po udhëtoni, dhe në cilën destinacion dëshironi që pasagjerët të ngjiten dhe zbresin.",
+  "basicInfoSecondDescOne1": "Zgjidhni një nga vendet tona të sugjeruara për marrjen dhe zbritjen e pasagjerëve. Kështu do të jetë më e lehtë për të gjithë!",
+  "basicInfoSecondTitleTwo": "2. Pasagjerët tuaj bëjnë rezervime online",
+  "basicInfoSecondDescTwo": "Kur pasagjeri të rezervojë vendin e tij, do t'ju dërgojmë numrin e tij të telefonit.",
+  "basicInfoSecondDescTwo2": "Mund të shikoni informacionet për udhëtimin dhe pasagjerët tuaj në çdo kohë.",
+  "basicInfoSecondTitleThree": "3. Udhëtoni së bashku",
+  "basicInfoSecondDescThree": "Bisedoni, dëgjoni muzikë së bashku, ose thjesht shijoni udhëtimin e qetë me pasagjerët e tjerë.",
+  "basicInfoSecondTitleFour": "4. Pasagjerët ju paguajnë në para të gatshme",
+  "basicInfoSecondDescFour": "Pasagjerët do t'ju paguajnë në para të gatshme për përdorimin e shërbimeve gjatë udhëtimit.",
+  "rideOffer": "Si të ofroni transport?",
+  "rideOfferTitleOne": "Hapi 1: Postoni udhëtimin",
+  "rideOfferStepOne": "Zgjidhni qytetet e nisjes dhe mbërritjes, dhe nëse është e nevojshme, shtoni pika kalimi përmes të cilave planifikoni të kaloni. Zgjidhni datën dhe orën e nisjes.",
+  "rideOfferTitleTwo": "Hapi 2: Shtoni detaje",
+  "rideOfferStepTwo": "Caktoni çmimin për pasagjer, numrin e vendeve të lira dhe zgjidhni nëse dëshironi të ofroni një maksimum prej dy pasagjerësh në sediljen e pasme për më shumë komoditet. Shtoni detaje rreth udhëtimit, siç janë dimensionet e lejuara për bagazhin, kafshët e lejuara në makinë dhe nëse jeni të gatshëm të ndaloni gjatë rrugës.",
+  "rideOfferTitleThree": "Hapi 3: Konfirmimi",
+  "rideOfferStepThree": "Zgjidhni si dëshironi të menaxhoni rezervimet – automatikisht ose manualisht. Postoni ofertën dhe ajo do të bëhet menjëherë e dukshme në platformë, duke lejuar pasagjerët të bëjnë një rezervim",
+  "rideOfferStepThree3": "Ofroni transport tani!",
+  "rating": "Vlerëso udhëtimin",
+  "ratingFirstTitle": "Pse kemi vlerësime?",
+  "ratingFirstDesc": "Vlerësimet janë rekomandime dhe ndihmojnë në marrjen e vendimeve kur zgjidhni transportin. Lini një vlerësim herën tjetër kur udhëtoni dhe ndani përvojat tuaja me të tjerët.",
+  "ratingSecondTitle": "Si të lini një vlerësim?",
+  "ratingSecondDesc": "Ju mund të lini vlerësime një ditë pas udhëtimit. Do të tërhiqeni me kujtesa përmes emailit dhe njoftimeve në profilin tuaj.",
+  "ratingSecondDescListOne": "1. Zgjidhni nëse anëtari që po vlerësoni është shofer apo pasagjer.",
+  "ratingSecondDescListTwo": "2. Zgjidhni përgjigjen që e përshkruan më mirë përvojën tuaj.",
+  "ratingSecondDescListThree": "3. Shkruani një përshkrim të shkurtër të përvojës tuaj, përfshini nëse arrijtët në kohë ose si ishte gjatë udhëtimit.",
+  "ratingSecondDescListFour": "Nuk keni frymëzim? Pyesni veten nëse do t'ia rekomandonit këtë person familjes suaj",
+  "ratingThirdTitle": "Vlerëso shoferin",
+  "ratingThirdDesc": "Nëse jeni pasagjer, mund ta vlerësoni shoferin anonimisht. Vlerësimi mesatar do të shfaqet në profilin e shoferit.",
+  "ratingFourthTitle": "Përgjigjuni një vlerësimi",
+  "ratingFourthDescOne": "Nëse merrni një vlerësim negativ, mund të përgjigjeni, dhe përgjigjja juaj do të shfaqet nën vlerësimin në profilin tuaj",
+  "ratingFourthDescTwo": "Shikoni vlerësimet tuaja!",
+  "account": "Si të krijoni një profil?",
+  "accountDesc": "Regjistrimi është falas! Thjesht shkoni në GetRide.mk, klikoni në butonin Regjistrohuni dhe ndiqni udhëzimet. Mund të përdorni adresën tuaj të emailit ose profilin tuaj të Facebook-ut për regjistrim. Pas regjistrimit, do të nevojiten disa informacione shtesë përpara se të mund të rezervoni transport, prandaj sigurohuni që ta përditësoni profilin tuaj.",
+  "setAccount": "Rregullimi i profilit tuaj",
+  "setAccountFirstTitle": "Jeni kyçur, por duhet të përditësoni profilin tuaj.",
+  "setAccountFirstDesc": "Ja se si të përditësoni informacionet tuaja personale, menaxhoni njoftimet dhe verifikoni profilin tuaj.",
+  "setAccountSecondTitle": "Redaktoni informacionin personal",
+  "setAccountSecondDesc": "Pavarësisht nëse jeni pasagjer ose shofer, redaktimi i profilit tuaj është i detyrueshëm. Pasi të hyni, shkoni në profilin tuaj për të:",
+  "setAccountSecondDescListOne": "Redaktoni cilësimet e profilit tuaj: Mësoni se ku t’i gjeni dhe t’i përditësoni informacionet tuaja personale.",
+  "setAccountSecondDescListTwo": "Ndryshoni adresën tuaj të e-mailit: Mësoni si të shtoni ose përditësoni adresën tuaj të e-mailit.",
+  "setAccountSecondDescListThree": "Ndryshoni ose rivendosni fjalëkalimin tuaj: Mësoni si të krijoni ose përditësoni fjalëkalimin tuaj.",
+  "setAccountSecondDescListFour": "Menaxhoni njoftimet: Mësoni si të menaxhoni mënyrat se si merrni njoftime në GetRide.",
+  "setAccountThirdTitle": "Verifikoni profilin tuaj.",
+  "setAccountThirdDescOne": "Verifikimi i profilit tuaj forcon besimin në komunitetin tonë dhe ndihmon anëtarët e tjerë të ndihen më të sigurt kur udhëtojnë me ju. Për të marrë shenjën 'Profil i Verifikuar', duhet të bëni disa hapa:",
+  "setAccountThirdDescListOne": "Verifikimi i identitetit tuaj: Informacione dhe zgjidhje problemesh në lidhje me dërgimin e dokumentit tuaj të identitetit përmes sistemit tonë të sigurt të verifikimit — të cilin ne nuk e ndajmë me askënd.",
+  "setAccountThirdDescListTwo": "Konfirmimi i numrit tuaj të telefonit: Shikoni se si të shtoni, azhurnoni dhe verifikoni numrin tuaj të telefonit.",
+  "setAccountThirdDescListThree": "Konfirmimi i adresës tuaj të emailit: Shikoni se si të shtoni ose azhurnoni adresën tuaj të emailit.",
+  "setAccountThirdDescTwo": "Siguria e të dhënave tuaja personale është shumë e rëndësishme. Për më shumë informacione rreth mënyrës se si i ruajmë të dhënat tuaja personale, ju lutemi shikoni Politikën tonë të Privatësisë.",
+  "price": "Si përcaktohet çmimi dhe cilat janë procedurat e pagesës?",
+  "priceDescOne": "Çmimi i transportit është fikse kur shoferi ofron transport dhe nuk është i negociueshëm. Ai është i njëjtë për të gjithë pasagjerët. Çmimi përcaktohet sipas një rekomandimi dhe llogaritjeje të dhënë nga GetRide, bazuar në planin e udhëtimit dhe shpenzimet reale të shoferit. Shoferët kanë mundësinë të ndikojnë në çmim brenda kufijve të arsyeshëm, duke përfshirë faktorë të tillë si komoditeti i mjetit ose gatishmëria e tyre për të devijuar nga rruga kryesore.",
+  "priceDescTwo": "Çmimi nuk mund të kalojë kufirin e sipërm të përcaktuar nga GetRide, për të siguruar një ndarje të drejtë të shpenzimeve dhe për të parandaluar që shoferi të bëjë një fitim më të madh se ai i lejuar. Gjithashtu, çmimi për pasagjer përfaqëson një të tretën e çmimit të karburantit të nevojshëm për udhëtimin. Kur shoferi transporton tre pasagjerë, ai mbulon të gjitha shpenzimet për karburant.",
+  "priceDescThree": "Pagesa për shoferin është e thjeshtë: duhet të paguhet në cash në ditën e udhëtimit.",
+  "priceDescFour": "Mos harroni – sillni shumën e saktë!",
+
+  "filterCompTitleOne": "Rendit sipas",
+  "filterCompTitleTwo": "Koha e nisjes",
+  "filterCompTitleThree": "Përfitime",
+  "filterCompButtonOne": "Pastro filtrat",
+  "filterCompButtonTwo": "Filtro",
+  "filterCompSortOne": "⏳ Koha më e hershme e nisjes",
+  "filterCompSortTwo": "💰 Çmimi më i ulët",
+  "filterCompSortThree": "🚗 Udhëtimi më i shkurtër",
+  "filterCompSortFour": "⭐ Vlerësimet më të mira të shoferit",
+  "filterCompTimeOne": "Para orës 06:00",
+  "filterCompTimeTwo": "Pas orës 18:00",
+  "filterCompBenefitsOne": "🚘 Maksimumi 2 pasagjerë në sediljen e pasme",
+  "filterCompBenefitsOTwo": "🐶 Lejohen kafshët shtëpiake",
+  "filterCompBenefitsThree": "🚬 Lejohet duhani",
+
+  "ridesCompTitle": "Transport i disponueshëm",
+  "ridesCompDesc": "Nuk ka transport për kohën e zgjedhur.",
+  "ridesCompDescOne": "Vlerësime:",
+  "ridesCompDescTwo": "Destinacioni:",
+  "ridesCompDescThree": "Nisja:",
+  "ridesCompDescFour": "Kohëzgjatja:",
+  "ridesCompDescFive": "Çmimi:",
+  "ridesCompDescSix": "Lejohen kafshët shtëpiake:",
+  "ridesCompDescSeven": "Maksimumi dy pasagjerë në sediljen e pasme:",
+  "ridesCompDescEight": "Lejohet duhani:",
+  "ridesCompButton": "Rezervo",
+
+  "passengersCompOne": "Të rritur (16+ vjeç)",
+  "passengersCompTwo": "Fëmijë (4-15 vjeç)",
+  "passengersCompThree": "Foshnja (0-3 vjeç)",
+  "passengersCompFour": "Pasagjerë me lëvizshmëri të kufizuar",
+  "passengersCompFive": "Nuk ka pasagjerë të shtuar me lëvizshmëri të kufizuar.",
+  "passengersCompSix": "Data e lindjes:",
+  "passengersCompSeven": "Lloji i aftësisë së kufizuar:",
+  "passengersCompEight": "Zgjidh llojin",
+  "passengersCompNine": "Karrige me rrota",
+  "passengersCompTen": "Verbëri",
+  "passengersCompEleven": "Tjetër",
+  "passengersCompButton": "Shto",
+
+  "searchDescOne": "pasagjer",
+  "searchDescOneOne": "pasagjerë",
+  "searchDescTwo": "Vendndodhja e nisjes",
+  "searchDescThree": "Vendndodhja e mbërritjes",
+  "searchDescFour": "Numri i pasagjerëve",
+  "searchButton": "Kërko",
+
+  "heroTitle": "Transport për në destinacionin tuaj",
+
+  "homePageTitleOne": "Gjej një Destinacion",
+  "homePageTitleTwo": "Gjej një Shofer",
+  "homePageTitleThree": "Rezervo",
+  "homePageTitleFour": "Arrij në Kohë",
+  "homePageDescOne": "Gjeni destinacionin ku dëshironi të shkoni",
+  "homePageDescTwo": "Gjeni dikë që udhëton drejt destinacionit tuaj",
+  "homePageDescThree": "Rezervo një vend",
+  "homePageDescFour": "Arrini në kohë. Do ta dini paraprakisht kohën e mbërritjes tuaj",
+
+  "homePageForm": "+ Postoni një udhëtim",
+  "postRideFormAlert": "Udhëtimi u postua me sukses!",
+  "postRideFormTitle": "Posto një Udhëtim",
+  "postRideFormOne": "Vendndodhja e nisjes:",
+  "postRideFormTwo": "Ku mund të marrësh pasagjerët:",
+  "postRideFormThree": "Numri i pasagjerëve:",
+  "postRideFormFour": "Ora e nisjes:",
+  "postRideFormFive": "Destinacioni:",
+  "postRideFormButton": "Posto",
+
+  "featuresTitleOne": "Udhëtoni të Sigurt drejt Destinacionit Tuaj",
+  "featuresTitleTwo": "Kurseni Para gjatë Udhëtimit",
+  "featuresTitleThree": "Gjeni Shpejt një Transport për në Qytetin Tuaj",
+  "featuresDescOne": "Përmes aplikacionit tonë, mund të zgjidhni me kë do të udhëtoni. Shoferët marrin vlerësime, duke ju siguruar një udhëtim të sigurt.",
+  "featuresDescTwo": "Keni mundësinë të kurseni para gjatë udhëtimit. Ndani shpenzimet tuaja me pasagjerët e tjerë.",
+  "featuresDescThree": "Kërkoni njoftime aktive dhe gjeni një shofer që do t’ju çojë të sigurt në destinacionin tuaj.",
+
+  "dropDownOne": "🚗 Udhëtimet Tuaja",
+  "dropDownTwo": "💬 Kutia e Mesazheve",
+  "dropDownThree": "👤 Profili",
+  "dropDownFour": "🏦 Pagesa dhe Rimbursimet",
+  "dropDownButton": "Shkyçu"
 }
